--- a/slides/1-regression.slides.html
+++ b/slides/1-regression.slides.html
@@ -13350,7 +13350,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="1.1-Simple-Linear-Regression">1.1 Simple Linear Regression<a class="anchor-link" href="#1.1-Simple-Linear-Regression">&#182;</a></h2><p><a href="#/1"><em>go to index</em></a></p>
+<h2 id="1.1-Simple-Linear-Regression">1.1 Simple Linear Regression<a class="anchor-link" href="#1.1-Simple-Linear-Regression">&#182;</a></h2><p><a href="#/1"><em>back to index</em></a></p>
 
 </div>
 </div>
