--- a/slides/1-regression.slides.html
+++ b/slides/1-regression.slides.html
@@ -17670,14 +17670,7 @@ $$<p>However, leverage alone is not necessarily enough for an observation to bei
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Next-Session">Next Session<a class="anchor-link" href="#Next-Session">&#182;</a></h2>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Jump to <a href="https://matteocourthoud.github.io/course/ml-econ/2-iv/">Session 2 - Instrumental Variables</a></p>
+<h2 id="Next-Session">Next Session<a class="anchor-link" href="#Next-Session">&#182;</a></h2><p>Jump to <a href="https://matteocourthoud.github.io/course/ml-econ/2-iv/">Session 2 - Instrumental Variables</a></p>
 
 </div>
 </div>
