--- a/slides/10_unsupervised.slides.html
+++ b/slides/10_unsupervised.slides.html
@@ -13210,10 +13210,25 @@ a.anchor-link {
 <h1 id="Session-10:-Unsupervised-Learning">Session 10: Unsupervised Learning<a class="anchor-link" href="#Session-10:-Unsupervised-Learning">&#182;</a></h1>
 </div>
 </div>
-</div></section><section>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Remove warnings</span>
+<span class="kn">import</span> <span class="nn">warnings</span>
+<span class="n">warnings</span><span class="o">.</span><span class="n">filterwarnings</span><span class="p">(</span><span class="s1">&#39;ignore&#39;</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div></section><section>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Import</span>
@@ -13236,7 +13251,7 @@ a.anchor-link {
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Import matplotlib for graphs</span>
@@ -13253,21 +13268,6 @@ a.anchor-link {
 <span class="n">plt</span><span class="o">.</span><span class="n">rcParams</span><span class="p">[</span><span class="s1">&#39;axes.titlesize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">18</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">rcParams</span><span class="p">[</span><span class="s1">&#39;axes.labelsize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">14</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">rcParams</span><span class="p">[</span><span class="s1">&#39;legend.fontsize&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="mi">14</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-</div></section><section>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Remove warnings</span>
-<span class="kn">import</span> <span class="nn">warnings</span>
-<span class="n">warnings</span><span class="o">.</span><span class="n">filterwarnings</span><span class="p">(</span><span class="s1">&#39;ignore&#39;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13296,8 +13296,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="10.2-Principal-Component-Analysis">10.2 Principal Component Analysis<a class="anchor-link" href="#10.2-Principal-Component-Analysis">&#182;</a></h2><p><a href="#/1"><em>back to index</em></a></p>
-
+<h2 id="10.2-Principal-Component-Analysis">10.2 Principal Component Analysis<a class="anchor-link" href="#10.2-Principal-Component-Analysis">&#182;</a></h2>
 </div>
 </div>
 </div><div class="fragment">
@@ -13745,7 +13744,7 @@ $$<p>The objective that we are maximizing is just the sample variance of the $n$
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="PCA-and-spectral-analysis">PCA and spectral analysis<a class="anchor-link" href="#PCA-and-spectral-analysis">&#182;</a></h3>
+<h3 id="PCA-and-Spectral-Analysis">PCA and Spectral Analysis<a class="anchor-link" href="#PCA-and-Spectral-Analysis">&#182;</a></h3>
 </div>
 </div>
 </div><div class="fragment">
@@ -14572,8 +14571,7 @@ dtype: float64</pre>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Clustering">Clustering<a class="anchor-link" href="#Clustering">&#182;</a></h2><p><a href="#/1"><em>back to index</em></a></p>
-
+<h2 id="Clustering">Clustering<a class="anchor-link" href="#Clustering">&#182;</a></h2>
 </div>
 </div>
 </div></section></section><section><section>
@@ -15445,7 +15443,7 @@ clustering on this example with <code>K  =  3</code>. If we do this, K-means clu
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="The-linkage-function">The linkage function<a class="anchor-link" href="#The-linkage-function">&#182;</a></h3>
+<h3 id="The-Linkage-Function">The Linkage Function<a class="anchor-link" href="#The-Linkage-Function">&#182;</a></h3>
 </div>
 </div>
 </div><div class="fragment">
